--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
      <section class="container ">
        <div class="row d-flex">
 
-     <div class="col-md-6 ">
+     <div class="col-md-6">
 
-      <div class="col-md-4  d-flex align-items-center shadow-lg rounded service-padding">
+      <div class="  d-flex align-items-center  rounded service-padding">
         <div>
           <img src="images/image 12.png" alt="" class="img-fluid"">
         </div>
@@ -191,7 +191,7 @@
           <p class="service-p">Everybody is different which is why we offer styles for everybody</p>
         </div>
       </div>
-      <div class="col-md-4  d-flex align-items-center shadow-lg rounded service-padding">
+      <div class="  d-flex align-items-center service-padding">
         <div>
           <img src="images/image 12.png" alt="" class="img-fluid"">
         </div>
@@ -201,6 +201,19 @@
         </div>
        
      </div>
+     <div class="  d-flex align-items-center service-padding">
+      <div>
+        <img src="images/image 12.png" alt="" class="img-fluid"">
+      </div>
+      <div class="service">
+        <h2 class="service-header">Find The Perfect Fit</h2>
+        <p class="service-p">Everybody is different which is why we offer styles for everybody</p>
+      </div>
+     
+   </div>
+   </div>
+
+
      <div class="col-md-6">
        <img src="images/XMLID 1.png" alt="" class="img-fluid">
      </div>
